[package]
name = "roles"
version = "0.1.0"
edition = "2021"
default-run = "roles"

[[bin]]
name = "deploy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
dotenvy = "0.15.5"
futures = "0.3.24"
icu_list = { version = "1.0.0", features = ["serde"] }
icu_locid = "1.0.0"
icu_provider = "1.0.1"
icu_provider_adapters = { version = "1.0.0", features = ["serde"] }
icu_provider_blob = "1.0.0"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
twilight-gateway = "0.13.3"
twilight-http = "0.13.2"
twilight-model = "0.13.5"
twilight-util = { version = "0.13.3", features = ["builder"] }
writeable = "0.5.0"

[build-dependencies]
icu = "1.0.0"
icu_datagen = "1.0.2"
